--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,9 +24,23 @@
         <activity
             android:name=".spotifystreamer.SpotifyStreamer"
             android:label="@string/app_name_spotify">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
+
+        </activity>
+
+        <activity
+            android:name=".spotifystreamer.SpotifySearch"
+            android:label="@string/app_name_spotify">
+            <!--
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+            -->
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
